ExamsView: Improved overflow (fixes #5437) (#5438)

--- a/src/app/exams/exams-view.scss
+++ b/src/app/exams/exams-view.scss
@@ -1,4 +1,14 @@
 :host {
+
+  .view-container {
+    display: grid;
+    grid-template-rows: min-content minmax(auto, min-content) max-content min-content;
+
+    td-markdown {
+      overflow-y: auto;
+    }
+  }
+
   .question-list {
     display: flex;
     flex-direction: column;
